syntax = "proto3";

package GetSmsCd;

option go_package = "./proto;GetSmsCd";

service GetSmsCd {
	rpc GetSmsCd(SMSRequest) returns (SMSResponse) {}
	rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse) {}
	rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse) {}
	rpc BidiStream(stream BidiStreamRequest) returns (stream BidiStreamResponse) {}
}

message SMSRequest {
	string mobile = 1;
	string text=2;
	string uuid=3;
}

message SMSResponse {
	// 错误码
	string Errno = 1;
	// 错误信息
	string ErrMsg = 2;

	string session_id=3;


}

message ClientStreamRequest {
	int64 stroke = 1;
}

message ClientStreamResponse {
	int64 count = 1;
}

message ServerStreamRequest {
	int64 count = 1;
}

message ServerStreamResponse {
	int64 count = 1;
}

message BidiStreamRequest {
	int64 stroke = 1;
}

message BidiStreamResponse {
	int64 stroke = 1;
}
